added banners and postman collection
